# AXIOM

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  Makefile  PRD.md  PRODUCTION.md  PUBLISHING.md  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: axiom.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
axiom/: cli.py  main.py
axiom-action/: action.yml  entrypoint.py
axiom/api/: analysis.py  auth.py  graph.py  health.py  patches.py  projects.py
axiom/core/: __init__.py  config.py  security.py  websocket.py
axiom/models/: __init__.py  api_models.py  db_models.py  gnn_v1.npz
axiom/services/: __init__.py  ast_service.py  embed_service.py  gnn_service.py  patch_service.py  predict_service.py  vector_store.py
axiom/workers/: analysis_worker.py  ebpf_worker.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css  main.tsx
dashboard/src/components/: ForceGraph.tsx  Layout.tsx  ui.tsx
dashboard/src/pages/: Dashboard.tsx  GraphExplorer.tsx
ebpf/: syscall_tracer.bpf.c
k8s/helm/axiom/: Chart.yaml  values.yaml
k8s/helm/axiom/templates/: _helpers.tpl  api.yaml  datastores.yaml
packaging/: axiom.spec  axiom_entry.py
scripts/: analyze.py  demo.py  gen_gnn_weights.py  setup_ebpf_wsl.sh
tests/: conftest.py
tests/integration/: test_api.py  test_auth_ws.py
tests/unit/: test_ast_parser.py  test_embedder.py  test_gnn_predict.py  test_patch_gen.py  test_patch_verify.py  test_security.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: axiomClient.ts  backend.ts  extension.ts
vscode-extension/src/providers/: RiskDecorations.ts
vscode-extension/src/views/: RiskViewProvider.ts
