# pyproject.toml — AXIOM backend package definition and dependencies.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom"
version = "1.0.0"
description = "AXIOM — Semantic Runtime Code Intelligence Platform"
authors = [{ name = "Rakshak S", email = "rakshaksujith@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0; platform_system != 'Windows'",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    # Config & validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiosqlite>=0.20",          # async SQLite fallback for local dev
    # Auth
    "pyjwt[crypto]>=2.8",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",              # GitHub OAuth + Ollama calls
    # Parsing
    "tree-sitter>=0.22",
    "tree-sitter-languages>=1.10; python_version < '3.12'",
    "watchdog>=4.0",
    # Vector DB
    "chromadb>=0.5",
    # Utilities
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy ML stack — optional so the API can boot without torch installed.
ml = [
    "torch>=2.3",
    "torch-geometric>=2.5",
    "sentence-transformers>=3.0",
]
# eBPF — Linux only. Never installable on Windows/macOS.
ebpf = [
    "bcc; platform_system == 'Linux'",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "black>=24.4",
    "isort>=5.13",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["axiom*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
